--- a/vercel.json
+++ b/vercel.json
@@ -1,16 +1,24 @@
 {
-  "rewrites": [
+  "version": 2,
+  "name": "x402rocks-token-minting",
+  "builds": [
     {
-      "source": "/frontend/:path*",
-      "destination": "/frontend/:path*"
+      "src": "index.html",
+      "use": "@vercel/static"
+    }
+  ],
+  "routes": [
+    {
+      "src": "/frontend/(.*)",
+      "dest": "/frontend/$1"
     },
     {
-      "source": "/:path*.:ext",
-      "destination": "/:path*.:ext"
+      "src": "/(.*\\..+)",
+      "dest": "/$1"
     },
     {
-      "source": "/:path*",
-      "destination": "/index.html"
+      "src": "/(.*)",
+      "dest": "/index.html"
     }
   ],
   "headers": [
